	avoid a bug in libiax2 sometimes after a call ends
	patch libiax2 to recognize (but ignore) CallToken
	use the S7 register instead of a hard 45-second answer timeout
        refactored process management (Federico Heinz)
	move call to closedir to resolve problems on BSD (John Bayly)
	if the timestamp jumps too much the jitterbuffer ignores it (Ivan Tikhonov)
	update to spandsp-20100228
	some changes for FreeBSD support to iaxmodem.c
	fix more unaligned problems for big-endian systems (libiax2)
	if we hang up on a call that is ringing then answer+hangup with IAX2 (Travis Schafer)
1.2.0
	improve skew behavior, especially for faulty RTC; add "skew" config feature
	add support for command-dial (ATD...;) in spandsp
	add support for ATA for CED when off-hook and connected to a call
	add support for ATD for CNG when off-hook and connected to a call
	fix the ordering of the seteuid()/setegid() (Julien BLACHE)
	update spandsp to 20080725 snapshot

1.1.1
	fix unaligned errors in libiax2 (Gus Bourg)
	improve training in spandsp V.27ter receive (Steve Underwood)
	fix a potential crash (divide by zero) in spandsp V.17 receive (Steve Underwood)
1.1.0
	kill -HUP now makes the modems wait to restart when they're on-hook
	improve IAX2 call rejection when the modem is busy by using
	    REJECT instead of ACCEPT+CONGSTN+HANGUP
	add "nodaemon" config file feature
	add "iax2debug" and "dspdebug" config file features
	update spandsp to 20080110 snapshot
	update libiax2 to current iaxclient/lib/libiax2 + patches
1.0.0
	provide strndup for Solaris
0.3.2
	support dialing of DTMF and commas
	support Solaris (thanks, Bruce McAlister)
	fix receive aborts when carrier is connected
	fix +FRH:3 from appearing at improper times
	set hang-up timer on unexpected disconnections as well
	stop fast looping on registration rejection
	fix numerous training issues with V.17 rx
	update spandsp to snapshot 20070802
0.3.1
	add -F option to prevent detachment (Francesco P. Sileno)